# equipment-testing

./: .gitignore  .pre-commit-config.yaml  AWS_CONFIGURATION.md  AWS_QUICKSTART.md  CHANGELOG.md  CONTRIBUTING.md  DATABRICKS_SETUP.md  DATA_MODEL.md  FRONTEND_BACKEND_INTEGRATION.md  IMPLEMENTATION.md  LICENSE  Makefile  README.md  Readme.md  SCRAPER_IMPLEMENTATION.md  example_scraper.py  examples.py  pyproject.toml  scrapy.cfg
.github/: copilot-instructions.md
.github/workflows/: README.md  ci.yml  deploy-api.yml.example  deploy-frontend.yml  deploy-production.yml  scraper.yml
archive/: AWS_QUICKSTART.md
archive/terraform/: README.md
migrations/: 001_create_tables.sql  README.md
scripts/: ensure_hooks.py
src/api/: __init__.py  main.py
src/core/: __init__.py  databricks_utils.py  generate_migration.py  models.py  setup_tables.py
src/equipment_testing/: __init__.py  __main__.py
src/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.css  App.tsx
src/frontend/src/components/: EquipmentCard.test.tsx  EquipmentCard.tsx  ErrorManagement.css  ErrorManagement.tsx
src/frontend/src/lib/: api.test.ts  api.ts  apiAdapter.test.ts  apiAdapter.ts  mockApi.test.ts  mockApi.ts
src/scrapers/: __init__.py  pipelines.py  settings.py
src/scrapers/spiders/: README.md  __init__.py  base_spider.py  quality_farm_supply.py
terraform/: README.md
tests/: __init__.py  test_api.py  test_basic.py  test_databricks_utils.py  test_hierarchy.py  test_lint_example.py  test_models.py  test_pipelines.py  test_quality_farm_supply.py  test_quality_farm_supply_mapping.py  test_setup_tables.py  test_spider_integration.py
