[project]
name = "equipment-testing"
version = "0.1.0"
description = "OpenAg-DB: Public, community-driven agricultural equipment database"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Equipment Testing Team", email = "team@example.com" }
]
keywords = ["agriculture", "equipment", "database", "farming", "tractors", "combines"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "scrapy>=2.11.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/adam133/equipment-testing"
Repository = "https://github.com/adam133/equipment-testing"
Documentation = "https://github.com/adam133/equipment-testing#readme"
Issues = "https://github.com/adam133/equipment-testing/issues"

[project.scripts]
equipment-testing = "equipment_testing.__main__:main"
openagdb-api = "api.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]
# Optional dependencies for full Iceberg support
iceberg = [
    "pyiceberg>=0.5.0",
    "duckdb>=0.9.0",
]
# Optional dependencies for advanced scraping
scraping = [
    "scrapy-playwright>=0.0.34",
    "playwright>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/api/*.py" = ["B008"]  # FastAPI Query() in defaults is intentional

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
